<resources>
    <string name="app_name">JStore</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_buy">Buy</string>
    <string name="title_sell">Sell</string>
    <string name="title_me">Me</string>

    <string name="sign_in">Sign in</string>
    <string name="anonymous_sign_in">Sign In Anonymously</string>
    <string name="email_hint">Email:</string>
    <string name="jacobs_email">\@jacobs-university.de</string>
    <string name="send_link">Send Link</string>
    <string name="reenter_username">Reenter Username:</string>
    <string name="sign_out">Sign out</string>

    <string name="greet_new_user">Welcome! It looks like you are new here. Let\'s enter some basic
        info before using the app.</string>
    <string name="full_name">Full Name:</string>
    <string name="preferred_way_of_contact">Preferred Way of Contact: </string>
    <string name="WhatsApp">WhatsApp</string>
    <string name="email">Email</string>
    <string name="phone_hint">Phone:</string>
    <string name="plus_sign">+</string>
    <string name="start_using">Start Using!</string>

    <string name="greet_anonymous_user">Welcome! You\'ve signed in anonymously. You can browse through
        all the items in the Buy section. In order to use full functionalities, please sign out in the
        Me section first. And then sign in with your email.</string>

    <string name="sell_a_new_item">Sell a new item: (all fields below are required)</string>
    <string name="title">Title:</string>
    <string name="category">Category:</string>
    <string name="condition">Condition:</string>
    <string name="posted_at">Posted at&#160;</string>
    <string name="by">by&#160;</string>
    <string name="sold_at">Sold at&#160;</string>
    <string name="owner">Owner: </string>
    <string-array name="category_array">
        <item>Apparel, Shoes &amp; Watches</item>
        <item>Automotive, Motorcycle &amp; Industrial</item>
        <item>Beauty &amp; Health</item>
        <item>Books &amp; Audible</item>
        <item>Electronics &amp; Computers</item>
        <item>Grocery/Food</item>
        <item>Home, Garden, Pets &amp; DIY</item>
        <item>Automotive, Motorcycle &amp; Industrial</item>
        <item>Sports &amp; Outdoors</item>
        <item>Other</item>
    </string-array>
    <string-array name="condition_array">
        <item>New</item>
        <item>Open Box</item>
        <item>Used</item>
        <item>For parts or not working</item>
    </string-array>
    <string name="description">Description:</string>
    <string name="add_photo">Add Photo</string>
    <string name="price">Price:</string>
    <string name="euro_sign">&#8364;</string>
    <string name="preferred_payment_options">Preferred Payment Options:</string>
    <string name="cash">Cash</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="PayPal">PayPal</string>
    <string name="meal_plan">Meal Plan</string>
    <string name="finish">Finish</string>
    <string name="take_photo">Take Photo</string>
    <string name="photo_uploaded">Photo Uploaded</string>

    <string name="anonymous_sell">It looks like you are an anonymous user. In order to use this section
    and unlock more functionalities, please go to Me section and sign out. Then sign in again with your
    email.</string>

    <string name="picture_of_the_item">Picture of the Item</string>

    <string name="view">View</string>

    <string name="details">Details</string>
    <string name="product_details">Product Details</string>
    <string name="send_email">Send Email</string>
    <string name="text_on_whatsapp">Text on WhatsApp</string>
    <string name="owner_email">Email:</string>

    <string name="member_since">Member since: </string>
    <string name="save">Save</string>
    <string name="picture_of_me_item">Picture of Me Item</string>
    <string name="active_posts">Active Posts</string>
    <string name="sold_items">Sold Items</string>
    <string name="notification_settings">Notification Settings</string>


    <string name="mark_as_sold">Mark As Sold</string>
    <string name="delete_post">Delete Post</string>
    <string name="are_you_sure_mark_as_sold">Are you sure you want to mark this item as sold?</string>
    <string name="irreversible">This action is irreversible.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_delete">Are you sure you want to delete this post?</string>
    <string name="are_you_sure_sign_out">Are you sure you want to sign out?</string>
    <string name="title_activity_notification_settings">Settings</string>

    <string name="jstore_title">JStore: A Marketplace for Jacobs University Bremen</string>

    <string name="footer">Made with &#10084; by <a href="mailto:tillchen417@gmail.com">Tianyao Chen</a>
        and <a href="mailto:taiyrbegeyev@gmail.com">Taiyr Begeyev</a> </string>
    <string name="prefix">Prefix:</string>
    <string name="feedback">Feedback</string>
    <string name="by_signing_in">By signing in, you agree to our <a href="https://jstore.xyz/terms_and_conditions">
        Terms and Conditions</a> and <a href="https://jstore.xyz/privacy_policy">Privacy Policy</a>.</string>

    <string name="search_here">Search. Search \"all\" For All Items.</string>
    <string name="price_up">Price&#8593;</string>
    <string name="price_down">Price&#8595;</string>
    <string name="date_up">Date&#8593;</string>

    <string-array name="buy_category_array">
        <item>All Categories</item>
        <item>Apparel, Shoes &amp; Watches</item>
        <item>Automotive, Motorcycle &amp; Industrial</item>
        <item>Beauty &amp; Health</item>
        <item>Books &amp; Audible</item>
        <item>Electronics &amp; Computers</item>
        <item>Grocery/Food</item>
        <item>Home, Garden, Pets &amp; DIY</item>
        <item>Automotive, Motorcycle &amp; Industrial</item>
        <item>Sports &amp; Outdoors</item>
        <item>Other</item>
    </string-array>

</resources>
