<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewUserActivity"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_new_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"/>

    <TextView
        android:id="@+id/greet_new_user_textView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/greet_new_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_new_user"
        app:layout_constraintVertical_bias="0.00999999" />

    <EditText
        android:id="@+id/full_name_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:maxLength="50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/greet_new_user_textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/greet_new_user_textView"
        app:layout_constraintTop_toBottomOf="@+id/greet_new_user_textView"
        app:layout_constraintVertical_bias="0.050000012" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/contact_textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/contact_textView"
        app:layout_constraintTop_toBottomOf="@+id/contact_textView"
        app:layout_constraintVertical_bias="0.050000012">

        <RadioButton
            android:id="@+id/WhatsApp_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/WhatsApp" />

        <RadioButton
            android:id="@+id/email_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" />
    </RadioGroup>

    <TextView
        android:id="@+id/contact_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preferred_way_of_contact"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/full_name_editText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/full_name_editText"
        app:layout_constraintTop_toBottomOf="@+id/full_name_editText"
        app:layout_constraintVertical_bias="0.050000012" />

    <EditText
        android:id="@+id/phone_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        android:maxLength="20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.050000012" />

    <Button
        android:id="@+id/start_button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_using"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/phone_editText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/phone_editText"
        app:layout_constraintTop_toBottomOf="@+id/phone_editText"
        app:layout_constraintVertical_bias="0.050000012" />


</androidx.constraintlayout.widget.ConstraintLayout>