<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingBottom="@dimen/nav_view_height">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/sell_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/title_sell" />

        <CheckBox
            android:id="@+id/paypal_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PayPal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/cash_checkBox"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/cash_checkBox"
            app:layout_constraintTop_toBottomOf="@+id/cash_checkBox"
            app:layout_constraintVertical_bias="0.050000012" />

        <CheckBox
            android:id="@+id/bank_transfer_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bank_transfer"
            app:layout_constraintBottom_toBottomOf="@+id/cash_checkBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toEndOf="@+id/cash_checkBox"
            app:layout_constraintTop_toTopOf="@+id/cash_checkBox" />

        <CheckBox
            android:id="@+id/meal_plan_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meal_plan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/bank_transfer_checkBox"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/bank_transfer_checkBox"
            app:layout_constraintTop_toBottomOf="@+id/bank_transfer_checkBox"
            app:layout_constraintVertical_bias="0.050000012" />

        <TextView
            android:id="@+id/sell_title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sell_a_new_item"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sell_toolbar"
            app:layout_constraintVertical_bias="0.050000012" />

        <EditText
            android:id="@+id/title_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="18"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:maxLength="50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/sell_title_textView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/sell_title_textView"
            app:layout_constraintTop_toBottomOf="@+id/sell_title_textView"
            app:layout_constraintVertical_bias="0.050000012" />

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/category_array"
            app:layout_constraintBottom_toBottomOf="@+id/category_textView"
            app:layout_constraintEnd_toEndOf="@+id/title_editText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/category_textView"
            app:layout_constraintTop_toTopOf="@+id/category_textView" />

        <Spinner
            android:id="@+id/condition_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/condition_array"
            app:layout_constraintBottom_toBottomOf="@+id/condition_textView"
            app:layout_constraintEnd_toEndOf="@+id/title_editText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/condition_textView"
            app:layout_constraintTop_toTopOf="@+id/condition_textView" />

        <TextView
            android:id="@+id/category_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/title_editText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/title_editText"
            app:layout_constraintTop_toBottomOf="@+id/title_editText"
            app:layout_constraintVertical_bias="0.050000012" />

        <TextView
            android:id="@+id/condition_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/condition"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/category_spinner"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/category_textView"
            app:layout_constraintTop_toBottomOf="@+id/category_textView"
            app:layout_constraintVertical_bias="0.050000012" />

        <EditText
            android:id="@+id/description_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="18"
            android:gravity="start|top"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:maxLength="300"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/title_editText"
            app:layout_constraintStart_toStartOf="@+id/title_editText"
            app:layout_constraintTop_toBottomOf="@+id/condition_spinner"
            app:layout_constraintVertical_bias="0.050000012" />

        <Button
            android:id="@+id/add_photo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_photo"
            app:layout_constraintBottom_toTopOf="@+id/price_editText"
            app:layout_constraintEnd_toEndOf="@+id/description_editText"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toEndOf="@+id/take_photo_button"
            app:layout_constraintTop_toTopOf="@+id/take_photo_button" />

        <EditText
            android:id="@+id/price_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:maxLength="8"
            app:layout_constraintBottom_toBottomOf="@+id/euro_sign_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/euro_sign_textView"
            app:layout_constraintTop_toTopOf="@+id/euro_sign_textView" />

        <TextView
            android:id="@+id/euro_sign_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/euro_sign"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toEndOf="@+id/take_photo_button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/take_photo_button"
            app:layout_constraintTop_toBottomOf="@+id/take_photo_button"
            app:layout_constraintVertical_bias="0.050000012" />

        <TextView
            android:id="@+id/payment_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preferred_payment_options"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/euro_sign_textView"
            app:layout_constraintTop_toBottomOf="@+id/price_editText"
            app:layout_constraintVertical_bias="0.050000012" />

        <CheckBox
            android:id="@+id/cash_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/payment_textView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/payment_textView"
            app:layout_constraintTop_toBottomOf="@+id/payment_textView"
            app:layout_constraintVertical_bias="0.050000012" />

        <Button
            android:id="@+id/finish_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/paypal_checkBox"
            app:layout_constraintTop_toBottomOf="@+id/paypal_checkBox"
            app:layout_constraintVertical_bias="0.20999998" />

        <Button
            android:id="@+id/take_photo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/description_editText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/description_editText"
            app:layout_constraintTop_toBottomOf="@+id/description_editText"
            app:layout_constraintVertical_bias="0.050000012" />

        <TextView
            android:id="@+id/photo_uploaded_textView"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/photo_uploaded"
            app:layout_constraintBottom_toBottomOf="@+id/add_photo_button"
            app:layout_constraintEnd_toEndOf="@+id/description_editText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/add_photo_button"
            app:layout_constraintTop_toTopOf="@+id/add_photo_button" />

        <ProgressBar
            android:id="@+id/upload_progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:max="100"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/photo_uploaded_textView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/photo_uploaded_textView"
            app:layout_constraintTop_toBottomOf="@+id/photo_uploaded_textView"
            app:layout_constraintVertical_bias="0.0" />

        <ProgressBar
            android:id="@+id/sell_finish_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/finish_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toEndOf="@+id/finish_button"
            app:layout_constraintTop_toTopOf="@+id/finish_button" />

        <Button
            android:id="@+id/temp_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Button"
            app:layout_constraintStart_toEndOf="@+id/sell_finish_progressBar"
            app:layout_constraintTop_toTopOf="@+id/finish_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

