<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <Button
        android:id="@+id/signin_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_editText"
        app:layout_constraintVertical_bias="0.25" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/JStore_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_details"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:id="@+id/sendlink_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/send_link"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_editText"
        app:layout_constraintVertical_bias="0.25" />

    <EditText
        android:id="@+id/email_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="9"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/JStore_textView"
        app:layout_constraintVertical_bias="0.8" />

    <Button
        android:id="@+id/anonymous_signin_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/anonymous_sign_in"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/email_editText"
        app:layout_constraintTop_toBottomOf="@+id/email_editText"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/jacobs_email_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jacobs_email"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/email_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/email_editText"
        app:layout_constraintTop_toTopOf="@+id/email_editText" />

    <ProgressBar
        android:id="@+id/login_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/email_editText"
        app:layout_constraintEnd_toEndOf="@+id/jacobs_email_textview"
        app:layout_constraintStart_toStartOf="@+id/email_editText" />

</androidx.constraintlayout.widget.ConstraintLayout>